# noir-go

./: LICENSE  go.mod  go.sum
internal/compiler/: Nargo.toml  brillig  compiler.go  compilerPanic  compiler_test.go  complierPanic  fooError  loaders.go  panic  panicFix  test  test_err  wasm.go  wasmPanic
internal/fs/: Nargo.toml  fs.go  fs_test.go  nargo.go  project.go  resolver.go
noir-compile/: main.nr
noir-compile/src/: main.rs
tools/: makefile
tools/experimentation/: time.txt
tools/experimentation/src/: main.nr
tools/noir-compile/: Cargo.toml  cargoCheck  errors.txt
tools/noir-compile/src/: main.rs
types/: Field.go
