[package]
name = "noir-compile"
version = "0.1.0"
edition = "2024"

[dependencies]
noirc_driver ={git = "https://github.com/noir-lang/noir",package="noirc_driver",rev = "v1.0.0-beta.18"}

noirc_frontend ={git = "https://github.com/noir-lang/noir",package = "noirc_frontend",rev = "v1.0.0-beta.18"}

nargo ={git = "https://github.com/noir-lang/noir",package = "nargo",rev = "v1.0.0-beta.18"}

acvm ={git = "https://github.com/noir-lang/noir",package = "acvm",rev = "v1.0.0-beta.18"}

noirc_artifacts ={git = "https://github.com/noir-lang/noir",package = "noirc_artifacts",rev = "v1.0.0-beta.18"}

acir={git = "https://github.com/noir-lang/noir",package = "acir",rev = "v1.0.0-beta.18",features = ["bn254"]}

serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3.0"
bincode = { version = "2.0.1", features = ["serde"] }

